--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -2,6 +2,9 @@ events {
     worker_connections  1024;
 }
 http {
+    # 以下两句必须加, 否则 vue 项目无样式
+    include   mime.types;
+    default_type  application/octet-stream;
     server {
         listen       80;
         server_name  localhost;
