--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -15,3 +15,14 @@ http {
         }
     }
 }
+
+# 端口映射
+# server {
+#   listen    80;
+#   server_name rbac.dev-lu.com;
+ 
+#   # 80转发到8000端口
+#   location / {
+#       proxy_pass http://127.0.0.1:8000;
+#   }
+# }
